# 1111

./: .gitignore  README.md  pyproject.toml  requirements.txt
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/lib/: supabase.ts  types.ts
docs/: 2026-05-23-airs-mvp-implementation-plan.md  2026-05-23-airs-strategic-intelligence-design.md  mini-agents-development.md  supabase_schema.sql
docs/superpowers/plans/: 2026-05-24-dashboard-monitoring-console.md
docs/superpowers/specs/: 2026-05-24-dashboard-monitoring-console-design.md
front/version2/: README.md  inspect-node.js  package.json  server.js
front/version2/public/: index.html
front/version2/src/: insights.js  mock-data.js  normalize.js  pipeline.js  scoring.js  taxonomy.js  text.js  view-model.js
src/airs/: __init__.py  social_media_agent.py
test/: search_chow_tai_fook.py  smoke_all_collectors.py  smoke_all_regions.py  smoke_pipeline.py  smoke_read_supabase.py  smoke_reddit.py  smoke_social_media.py  smoke_supabase_writer.py  smoke_tavily.py  smoke_x_mcp.py  test_base_mcp_client.py  test_middle_east_collector.py  test_reddit_mcp_provider.py  test_social_media_agent.py  test_supabase_rw.py  test_x_mcp_provider.py
test/agent_testers/: smoke_all_collectors.py  smoke_full_pipeline.py  smoke_pipeline.py  test_briefing_orchestrator.py  test_middle_east_collector.py  test_social_media_agent.py
test/tool_testers/: smoke_feishu_briefing.py  smoke_read_supabase.py  smoke_reddit.py  smoke_social_agent.py  smoke_tavily.py  smoke_x_mcp.py
(+36 files in other folders)
