[project]
name = "airs"
version = "0.1.0"
description = "AIRS overseas strategic intelligence platform MVP"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "tavily-python>=0.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
